fix cut off on smaller sizes

--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -125,7 +125,10 @@ a:active {
   a {
     display: block;
     content: url('../graphics/layout/EvidenceAction_DSWLogo.png');
+    width: 6rem;
+     @include media(medium-up) {
     width: 8rem;
+  }
   }
   * {
     vertical-align: top;
